compiler/testData/checkerWithErrorTypes/quick/SyntaxErrorInTestHighlighting.jet
// dummy test of syntax error highlighing in tests

fun get() {
    1 + 2 <!SYNTAX!>2 3 4<!>
}
